refactor: core optimization, UI modernization, and multi-job capabilities
Core Engine:
- Parallelized the core scan pipeline to allow concurrent multi-job execution.
- Implemented the duplicate scanning engine.
- Enhanced the native runtime shutdown hook to guarantee safe thread joining.

UI & Configuration:
- Updated from Swing to JavaFX views and integrated Material Symbols.
- Added support for dynamic application themes.
- Redesigned preference parsing logic to isolate configuration tokens per job.
- Prepared build configuration for the 1.1.0.0-alpha lifecycle.